# pixelizer

./: Cargo.toml  README.md
config/: config.json
src/: main.rs  utils.rs
