[package]
name = "pixelizer"
version = "1.0.0"
edition = "2021"

[dependencies]
image = "*"
imageproc = "*"
rprompt = "*"
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1", features = ["preserve_order"] }

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
rpath = true